@@ -49,6 +49,7 @@
 .*:50: Error: .*
 .*:51: Error: .*
 .*:52: Error: .*
+.*:54: Error: .*
 GAS LISTING .*
 
 
@@ -104,3 +105,5 @@ GAS LISTING .*
   50 [ 	]*popfl		# can't have 32-bit stack operands
   51 [ 	]*retl		# can't have 32-bit stack operands
   52 [ 	]*insertq \$4,\$2,%xmm2,%ebx # The last operand must be XMM register.
+  53 [ 	]*.intel_syntax noprefix
+  54 [ 	]*cmpxchg16b dword ptr \[rax\] # Must be xmmword
