@@ -50,3 +50,5 @@ foo:	jcxz foo	# No prefix exists to select CX as a counter
 	popfl		# can't have 32-bit stack operands
 	retl		# can't have 32-bit stack operands
 	insertq $4,$2,%xmm2,%ebx # The last operand must be XMM register.
+	.intel_syntax noprefix
+	cmpxchg16b dword ptr [rax] # Must be xmmword
