@@ -1,3 +1,8 @@
+2006-12-14  H.J. Lu  <hongjiu.lu@intel.com>
+
+	* i386-dis.c (CMPXCHG8B_Fixup): New.
+	(grps): Use CMPXCHG8B_Fixup for cmpxchg8b.
+
 2006-12-11  H.J. Lu  <hongjiu.lu@intel.com>
 
 	* i386-dis.c (Eq): Replaced by ...
